# mymc

./: AUTHORS  INSTALL  README  README.md  autogen.sh  configure.ac
src/: Makefile.am  Makefile.am~  Makefile.in  config.c  config.ini  init.c  init.h  main.c  main.h  mc.c  mc.h  mymc
src/.deps/: config.Po  ini.Po  io_buffer.Po  main.Po  mc.Po
